# sqa_tracker

./: README.md  pyproject.toml
app/: query_printer.py  query_tracker.py
tests/: test_query_tracking.py
